fix: select menu item checkbox state stuck

--- a/src/components/multiselect/MultiSelect.module.scss
+++ b/src/components/multiselect/MultiSelect.module.scss
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 350px;
-  min-height: 42px;
+  min-height: 45px;
   border: 1px solid var(--border-color);
   border-radius: var(--box-border-radius);
   display: flex;
